2013-01-24  James Robinson  <jamesr@chromium.org>

        [chromium] Remove dead transitional code from WebViewImpl
        https://bugs.webkit.org/show_bug.cgi?id=107889

        Reviewed by Adrienne Walker.

        * DumpRenderTree/chromium/WebViewHost.cpp:
        (WebViewHost::initializeLayerTreeView):
        (WebViewHost::setWebWidget):

2013-01-24  Joshua Bell  <jsbell@chromium.org>

        Add watchlist for IndexedDB development, and add myself and others.

        Unreviewed.

        * Scripts/webkitpy/common/config/watchlist:

2013-01-24  Martin Robinson  <mrobinson@igalia.com>

        Abstract the logic for appending a UChar32 onto StringBuilder
        https://bugs.webkit.org/show_bug.cgi?id=107505

        Reviewed by Darin Adler.

        * TestWebKitAPI/Tests/WTF/StringBuilder.cpp:
        (TestWebKitAPI::TEST): Added a simple test for appending UChar32.

2013-01-24  Erik Arvidsson  <arv@chromium.org>

        Unreviewed, rolling out r140703.
        http://trac.webkit.org/changeset/140703
        https://bugs.webkit.org/show_bug.cgi?id=107556

        r140561 was not the reason for the Android breakage

        * DumpRenderTree/chromium/TestShell.cpp:
        (TestShell::~TestShell):
        (TestShell::closeWindow):
        * DumpRenderTree/chromium/WebViewHost.cpp:
        (WebViewHost::WebViewHost):
        (WebViewHost::~WebViewHost):
        (WebViewHost::shutdown):
        * DumpRenderTree/chromium/WebViewHost.h:
        (WebViewHost):

2013-01-24  Dean Jackson  <dino@apple.com>

        Allow some plugin snapshot UI content to come from Injected Bundle
        https://bugs.webkit.org/show_bug.cgi?id=107852

        Reviewed by Anders Carlsson.

        Null implementations of plugInStartLabelTitle, plugInStartLabelSubtitle and
        plugInExtraStyleSheet.

        * WebKitTestRunner/InjectedBundle/InjectedBundlePage.cpp:
        (WTR::InjectedBundlePage::InjectedBundlePage):

2013-01-24  Erik Arvidsson  <arv@chromium.org>
